--- a/public/Archieve/pepper_mp (Start of Thread 3, face overhaul).html
+++ b/public/Archieve/pepper_mp (Start of Thread 3, face overhaul).html
@@ -54,6 +54,9 @@
   /* Multiplayer bar */
   .mpBar{max-width:1240px;margin:10px auto 0;padding:0 12px;}
  /* Collapse Multiplayer bar when closed */
+  body:not(.mpOpen) .mpBar .mpInner{
+    display: none;
+  }
 
 /* Multiplayer collapsible content */
 body:not(.mpOpen) #mpInner{ display:none; }
@@ -95,39 +98,14 @@ body:not(.mpOpen) #mpInner{ display:none; }
   box-sizing: border-box;
 }
 
-/* === Dynamic seat positions (viewer-relative) === */
-.seat.pos-bottom{
-  bottom: 34px;
-  left: 50%;
-  transform: translateX(-50%);
-}
+/* Move all seats closer to center */
+#p1{ bottom: 34px; left: 50%; transform: translateX(-50%); }
+#p3{ top:    34px; left: 50%; transform: translateX(-50%); }
+#p2{ left:   34px; top:  50%; transform: translateY(-50%); }
+#p4{ right:  34px; top:  50%; transform: translateY(-50%); }
 
-.seat.pos-top{
-  top: 34px;
-  left: 50%;
-  transform: translateX(-50%);
-}
 
-.seat.pos-left{
-  left: 60px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.seat.pos-right{
-  right: 60px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-  .name{
-  font-weight:1000;
-  font-size:20px;
-  text-shadow: 0 2px 8px rgba(0,0,0,.35);
-}
-@media (max-width: 900px){
-  .name{ font-size:16px; }
-}
+  .name{font-weight:1000;font-size:16px}
   .chips{display:flex;justify-content:center;gap:8px;margin-top:6px;flex-wrap:wrap}
   .chip{display:inline-flex;align-items:center;justify-content:center;height:24px;padding:0 10px;border-radius:999px;background:rgba(0,0,0,.35);border:1px solid rgba(255,255,255,.18);font-weight:900;font-size:12px}
   .chip.dealer{background:#ffcc00;color:#111;border-color:#ffcc00}
@@ -136,22 +114,7 @@ body:not(.mpOpen) #mpInner{ display:none; }
   .tag{margin-top:6px;display:inline-flex;padding:4px 10px;border-radius:999px;background:rgba(0,0,0,.35);border:1px solid rgba(255,255,255,.18);font-size:12px;font-weight:900}
   .tag.turn{background:rgba(255,215,0,.22);border-color:rgba(255,215,0,.55)}
 
-.hand{
-  display:flex;
-  justify-content:center;
-  align-items:flex-end;
-  flex-wrap:nowrap;     /* ✅ one row */
-  gap:6px;              /* ✅ normal spacing */
-  margin-top:10px;
-  min-height:102px;
-}
-
-/* ✅ remove any overlap rules you added */
-.hand .card{ margin-left:0; }
-
-.hand .card:first-child{
-  margin-left:0;
-}
+  .hand{display:flex;justify-content:center;gap:6px;flex-wrap:wrap;margin-top:10px;min-height:102px}
 
   /* Bigger cards in hands */
   .card{
@@ -237,56 +200,6 @@ body:not(.mpOpen) #mpInner{ display:none; }
       display: none;
     }
 
-/* =========================
-   CHAT UI (ephemeral)
-   ========================= */
-.chatLog{
-  margin-top:10px;
-  height:180px;
-  max-height:180px;
-  overflow:auto;
-  -webkit-overflow-scrolling: touch;
-  border-radius:12px;
-  border:1px solid rgba(0,0,0,.12);
-  background:#fff;
-  padding:10px;
-}
-
-.chatRow{
-  display:flex;
-  gap:8px;
-  align-items:center;
-  margin-top:10px;
-}
-
-.chatMsg{
-  padding:8px 10px;
-  border-radius:12px;
-  background:#f6f8fb;
-  border:1px solid rgba(0,0,0,.08);
-  margin-bottom:8px;
-}
-
-.chatMsg.system{
-  background:#fff6dc;
-  border-color:#ffe2a2;
-}
-
-.chatMsg .meta{
-  font-size:12px;
-  font-weight:900;
-  opacity:.8;
-  margin-bottom:4px;
-}
-
-/* Allow scrolling inside the board area on mobile (esp. landscape) */
-@media (max-width: 900px){
-  #boardPanel{
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-  }
-}
-
     /* Show ONLY my hand */
     body[data-my-seat="p1"] #hand-p1,
     body[data-my-seat="p2"] #hand-p2,
@@ -294,7 +207,6 @@ body:not(.mpOpen) #mpInner{ display:none; }
     body[data-my-seat="p4"] #hand-p4{
       display: flex;
     }
-
 
     /* Panels + headings (smaller / tighter) */
     .panel{
@@ -361,15 +273,12 @@ body:not(.mpOpen) #mpInner{ display:none; }
     }
 
     /* Hands */
-.hand{
-  margin-top: 6px;
-  min-height: 86px;
-  flex-wrap: nowrap;      /* ✅ one row on mobile too */
-  justify-content: center;
-  gap: 0;
-}
-.hand .card{ margin-left:-14px; }
-.hand .card:first-child{ margin-left:0; }
+    .hand{
+      margin-top: 6px;
+      min-height: 86px;
+      gap: 5px;
+    }
+
     /* Hand cards */
     .card{
       width: 54px;
@@ -432,6 +341,91 @@ body:not(.mpOpen) #mpInner{ display:none; }
     margin: 0;
     padding: 0;
     display: block; /* no grid */
+  }
+
+  /* Drawer (Actions) */
+  #actionsDrawer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: var(--drawer-w);
+    max-width: min(var(--drawer-w), 92vw);
+    background: #fff;
+    box-shadow: 0 16px 40px rgba(0,0,0,.35);
+    border-radius: 0 18px 18px 0;
+    transform: translateX(-102%);
+    transition: transform .18s ease;
+    z-index: 30;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  /* Board region fills the rest */
+  #boardStage{
+    position: absolute;
+    top: 0;
+    left: 0; right: 0; bottom: 0;
+    padding: 12px;
+    box-sizing: border-box;
+  }
+
+  /* Dim overlay when drawer open */
+ #drawerScrim{
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,.35);
+  opacity: 0;
+  pointer-events: none;     /* ✅ CRITICAL: don't block clicks when closed */
+  transition: opacity .2s ease;
+  z-index: 40;
+}
+
+  /* Open state */
+  body.drawerOpen #actionsDrawer{ transform: translateX(0); }
+  body.drawerOpen #drawerScrim{
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  /* Board panel: remove card-like look, let table dominate */
+  #boardPanel{
+    height: 100%;
+    background: transparent;
+    box-shadow: none;
+    padding: 0;
+  }
+
+  /* Make the table area fill the screen (minus some top widgets) */
+  #boardPanel .table{
+    height: calc(100% - 120px);
+    border-radius: 22px;
+  }
+
+  /* Tighten the little UI bars on top of board */
+  #tableBanner{ margin-bottom: 8px; }
+  #scoreBanner{ margin-bottom: 8px; }
+  #lastTrickBox{ margin-bottom: 10px; }
+
+  /* Hamburger button */
+  #uiToggle{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    height: 38px;
+    width: 44px;
+    border-radius: 12px;
+    border: 1px solid rgba(0,0,0,.14);
+    background: #f6f8fb;
+    font-weight: 950;
+    cursor: pointer;
+  }
+
+  /* Mobile tweaks */
+  @media (max-width: 900px){
+    :root{ --topbar-h: 70px; --drawer-w: 92vw; }
+    #boardStage{ padding: 10px; }
+    #boardPanel .table{ height: calc(100% - 128px); }
   }
 
 /* ================================
@@ -667,29 +661,9 @@ body.actionsOpen #actionsPanelBody{
           </div>
 
           <div class="hr"></div>
-<div id="actions"></div>
+          <div id="actions"></div>
 
-<!-- CHAT (ephemeral) -->
-<div class="panel" id="chatPanel" style="margin-top:12px">
-  <h2 style="display:flex;align-items:center;justify-content:space-between;gap:10px">
-    <span>Chat</span>
-    <span class="muted small" id="chatStatus">Offline</span>
-  </h2>
-
-  <div id="chatLog" class="chatLog"></div>
-
-  <div class="chatRow">
-    <input id="chatInput" class="input" placeholder="Type a message…" style="flex:1;min-width:0" />
-    <button class="btn primary" id="chatSend">Send</button>
-  </div>
-
-  <div class="muted small" style="margin-top:6px;opacity:.7">
-    Ephemeral room chat. Messages disappear when you refresh.
-  </div>
-</div>
-
-<div class="panel" id="logPanel" style="margin-top:12px">
-
+          <div class="panel" id="logPanel" style="margin-top:12px">
             <h2>Log</h2>
             <div id="log" class="log"></div>
           </div>
@@ -751,101 +725,6 @@ const MP = {
   seats: {p1:null,p2:null,p3:null,p4:null} // seat -> clientId
 };
 
-/* =========================================================
-   Chat (ephemeral)
-   ========================================================= */
-const CHAT_LOG = []; // {ts, seat, name, text, system?}
-
-function chatStatusText(){
-  const el = document.getElementById("chatStatus");
-  if(!el) return;
-
-  // don't crash if MP isn't ready
-  if (typeof MP === "undefined" || !MP) {
-    el.textContent = "Offline";
-    return;
-  }
-
-  const inRoom = (MP.connected && MP.roomCode);
-  el.textContent = inRoom ? "In room" : (MP.connected ? "Connected" : "Offline");
-}
-
-function formatTime(ts){
-  try{
-    const d = new Date(ts);
-    return d.toLocaleTimeString([], {hour:"2-digit", minute:"2-digit"});
-  }catch{
-    return "";
-  }
-}
-
-function escapeHtml(s){
-  return String(s||"")
-    .replaceAll("&","&amp;")
-    .replaceAll("<","&lt;")
-    .replaceAll(">","&gt;")
-    .replaceAll('"',"&quot;")
-    .replaceAll("'","&#039;");
-}
-
-function renderChat(){
-  const box = document.getElementById("chatLog");
-  if(!box) return;
-
-  box.innerHTML = CHAT_LOG.map(m=>{
-    const when = m.ts ? formatTime(m.ts) : "";
-    const who = m.system
-      ? "System"
-      : `${(m.seat || "spec").toUpperCase()}${m.name ? " ("+escapeHtml(m.name)+")" : ""}`;
-
-    return `
-      <div class="chatMsg ${m.system ? "system" : ""}">
-        <div class="meta">${escapeHtml(who)} <span style="opacity:.55;font-weight:800">${escapeHtml(when)}</span></div>
-        <div>${escapeHtml(m.text || "")}</div>
-      </div>
-    `;
-  }).join("");
-
-  box.scrollTop = box.scrollHeight;
-}
-
-function pushChatMessage(msg){
-  CHAT_LOG.push({
-    ts: msg.ts || Date.now(),
-    system: !!msg.system,
-    seat: msg.seat || "spec",
-    name: msg.name || "",
-    text: msg.text || ""
-  });
-  if(CHAT_LOG.length > 80) CHAT_LOG.splice(0, CHAT_LOG.length - 80);
-  renderChat();
-}
-
-function sendChat(){
-  const inRoom = (MP.connected && MP.roomCode);
-  if(!inRoom){
-    pushChatMessage({ system:true, ts:Date.now(), text:"Connect and join a room to chat." });
-    return;
-  }
-
-  const input = document.getElementById("chatInput");
-  if(!input) return;
-
-  const text = (input.value || "").trim();
-  if(!text) return;
-
-  const seat = MP.mySeat || "spec";
-  let name = "";
-  if(G && G.playerNames && MP.mySeat && ["p1","p2","p3","p4"].includes(MP.mySeat)){
-    name = G.playerNames[MP.mySeat] || "";
-  }
-
-  // local echo for instant UI feedback
-  pushChatMessage({ ts: Date.now(), seat, name, text });
-  mpSend({ type:"CHAT", text, seat, name });
-  input.value = "";
-}
-
 function mpSetRole(text){
   document.getElementById("mpRole").textContent = text;
 }
@@ -877,11 +756,7 @@ function mpEnsureWS(){
   const wsUrl = wsProto + location.host + "/ws";
   MP.ws = new WebSocket(wsUrl);
 
-  MP.ws.onopen = ()=>{
-    MP.connected = true;
-    mpRenderMeta();
-    chatStatusText();
-  };
+  MP.ws.onopen = ()=>{ MP.connected = true; mpRenderMeta(); };
   MP.ws.onclose = ()=>{
     MP.connected = false;
     MP.roomCode = null;
@@ -890,7 +765,6 @@ function mpEnsureWS(){
     MP.mySeat = null;
     MP.seats = {p1:null,p2:null,p3:null,p4:null};
     mpRenderMeta();
- chatStatusText();
   };
 
   MP.ws.onmessage = (e)=>{
@@ -909,8 +783,7 @@ function mpEnsureWS(){
       MP.isHost = (MP.clientId && MP.hostId && MP.clientId===MP.hostId);
       mpRenderMeta();
       if(MP.isHost && G) mpPublishState();
-  mpUpdateControls();
-      chatStatusText();
+      mpUpdateControls();
       return;
     }
     if(msg.type==="ROOM_JOINED"){
@@ -920,7 +793,6 @@ function mpEnsureWS(){
       MP.isHost = (MP.clientId && MP.hostId && MP.clientId===MP.hostId);
       mpRenderMeta();
       mpUpdateControls();
-      chatStatusText();
       return;
     }
 
@@ -968,13 +840,6 @@ function mpEnsureWS(){
       mpPublishState();
       return;
     }
-
-  if(msg.type==="CHAT"){
-      pushChatMessage(msg);
-      return;
-    }
-
-document.body.classList.add("actionsOpen");
 
     if(msg.type==="ERROR"){
       console.log("MP ERROR:", msg.message);
@@ -1454,7 +1319,8 @@ function dispatch(action){
       if (!["p1","p2","p3","p4"].includes(seat)) break;
 
       // In multiplayer, only allow changing YOUR claimed seat
-      
+      if (MP.connected && MP.roomCode && MP.mySeat && MP.mySeat !== "spec" && MP.mySeat !== seat) break;
+
       let nm = String(action.name || "").trim();
       if (nm.length > 16) nm = nm.slice(0, 16);
       if (!nm) nm = seat.toUpperCase();
@@ -1666,42 +1532,6 @@ function runSelfTest(){
   if(MP.isHost && MP.roomCode && !MP.applyingRemote) mpPublishState();
 }
 
-/* === Seat rotation: always put MY seat at bottom === */
-function uiPositionsForMySeat(mySeat){
-  const order = ["p1","p2","p3","p4"]; // clockwise
-
-  // default orientation if not seated
-  if (!order.includes(mySeat)){
-    return { bottom:"p1", left:"p2", top:"p3", right:"p4" };
-  }
-
-  const idx = order.indexOf(mySeat);
-  const rot = (i)=>order[(idx + i) % 4];
-
-  return {
-    bottom: mySeat,
-    left:   rot(1),
-    top:    rot(2),
-    right:  rot(3)
-  };
-}
-
-function applySeatPositions(){
-  const map = uiPositionsForMySeat(MP.mySeat);
-  const all = ["pos-bottom","pos-left","pos-top","pos-right"];
-
-  ["p1","p2","p3","p4"].forEach(s=>{
-    const el = document.getElementById(s);
-    if(!el) return;
-    el.classList.remove(...all);
-  });
-
-  document.getElementById(map.bottom)?.classList.add("pos-bottom");
-  document.getElementById(map.left)?.classList.add("pos-left");
-  document.getElementById(map.top)?.classList.add("pos-top");
-  document.getElementById(map.right)?.classList.add("pos-right");
-}
-
 function renderCard(card){
   if(!card) return "";
   return '<img src="cards/' + card.id + '.png" class="cardImg" draggable="false" alt="' + card.id + '">';
@@ -1711,7 +1541,6 @@ function renderCard(card){
 function render(){
   if(!G) return;
   document.body.dataset.mySeat = MP.mySeat || "";
-applySeatPositions();
 
   const bannerEl = document.getElementById("banner");
   if (bannerEl) {
@@ -1761,6 +1590,21 @@ applySeatPositions();
         `Win: +${G.target} • Lose: ${G.lose} • Trump: <b>${trumpLabel}</b>` +
       `</div>`;
   }
+
+  const cl = document.getElementById("centerLine");
+  if (cl) cl.textContent = (G.phase==="BIDDING") ? "Bidding" :
+      (G.phase==="TRUMP_CHOICE") ? `Trump choice (${G.declarer})` :
+      (G.phase==="CHALLENGE_DECISION") ? "Challenge?" :
+      (G.phase==="ASSIST_OFFER") ? "Partner Assist?" :
+      (G.phase==="ASSIST_DISCARD_FIRST") ? "Declarer discard" :
+      (G.phase==="ASSIST_PARTNER_PASS") ? "Partner pass card" :
+      (G.phase==="PLAY") ? "Play" :
+      (G.phase==="GAME_OVER") ? "Game Over" : G.phase;
+
+  const lt = G.lastTrick;
+  const cs = document.getElementById("centerSub");
+  if (cs) cs.innerHTML = `Dealer: <b>${G.dealer}</b> • Declarer: <b>${G.declarer||"—"}</b> • Trump: <b>${G.trump||"—"}</b>` +
+    (lt ? ` • <span style="opacity:.9">Last Trick: <b>${lt.winner}</b> won</span>` : "");
 
   // Update player name badges (dealer / declarer)
   ["p1","p2","p3","p4"].forEach(s=>{
@@ -1955,7 +1799,6 @@ Win: +${G.target}  Lose: ${G.lose}`;
 
   renderActions();
   renderInvariants();
-  chatStatusText();   // ✅ ADD THIS LINE
   mpUpdateControls();
 }
 
@@ -2069,26 +1912,6 @@ function renderActions(){
 /* Buttons */
 window.addEventListener("DOMContentLoaded", () => {
   updateRotateHint();
-  // ---- Chat: hard-wire handlers (robust) ----
-  const chatSend = document.getElementById("chatSend");
-  const chatInput = document.getElementById("chatInput");
-
-  if (chatSend) {
-    chatSend.addEventListener("click", () => {
-      try { sendChat(); }
-      catch (e) { console.error("sendChat failed:", e); }
-    });
-  }
-
-  if (chatInput) {
-    chatInput.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        try { sendChat(); }
-        catch (err) { console.error("sendChat failed:", err); }
-      }
-    });
-  }
   window.addEventListener("resize", updateRotateHint);
   window.addEventListener("orientationchange", updateRotateHint);
 
