v2: fix names/chat and UI polish_try6

--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -662,10 +662,9 @@ body.actionsOpen #actionsPanelBody{
 
       <!-- ACTIONS UNDER TABLE -->
       <div id="actionsPanel">
-        <div id="actionsPanelHeader">
-          <div class="title">Actions</div>
-          <div style="opacity:.7;font-weight:900" id="actionsChevron">▲</div>
-        </div>
+     <div id="actionsPanelHeader">
+  <div class="title">Actions</div>
+</div>
 
         <div id="actionsPanelBody">
           <div id="banner" class="muted"></div>
@@ -684,20 +683,26 @@ body.actionsOpen #actionsPanelBody{
 
 <!-- CHAT (ephemeral) -->
 <div class="panel" id="chatPanel" style="margin-top:12px">
-  <h2 style="display:flex;align-items:center;justify-content:space-between;gap:10px">
+  <h2 id="chatHeader"
+      style="display:flex;align-items:center;justify-content:space-between;gap:10px;cursor:pointer;user-select:none">
     <span>Chat</span>
-    <span class="muted small" id="chatStatus">Offline</span>
+    <span style="display:flex;align-items:center;gap:8px">
+      <span class="muted small" id="chatStatus">Offline</span>
+      <span id="chatChevron" style="font-weight:900">▲</span>
+    </span>
   </h2>
 
-  <div id="chatLog" class="chatLog"></div>
+  <div id="chatBody">
+    <div id="chatLog" class="chatLog"></div>
 
-  <div class="chatRow">
-    <input id="chatInput" class="input" placeholder="Type a message…" style="flex:1;min-width:0" />
-    <button class="btn primary" id="chatSend">Send</button>
-  </div>
+    <div class="chatRow">
+      <input id="chatInput" class="input" placeholder="Type a message…" style="flex:1;min-width:0" />
+      <button class="btn primary" id="chatSend">Send</button>
+    </div>
 
-  <div class="muted small" style="margin-top:6px;opacity:.7">
-    Ephemeral room chat. Messages disappear when you refresh.
+    <div class="muted small" style="margin-top:6px;opacity:.7">
+      Ephemeral room chat. Messages disappear when you refresh.
+    </div>
   </div>
 </div>
 
@@ -2134,21 +2139,7 @@ window.addEventListener("DOMContentLoaded", () => {
   const isSmallMP = window.matchMedia("(max-width: 900px)").matches;
   setMpBar(!isSmallMP);
 
-  // Actions panel toggle (under the table)
-  const actionsHeader = document.getElementById("actionsPanelHeader");
-  const actionsChevron = document.getElementById("actionsChevron");
-
-  function setActions(open){
-    document.body.classList.toggle("actionsOpen", !!open);
-    if (actionsChevron) actionsChevron.textContent = open ? "▲" : "▼";
-  }
-
-  if (actionsHeader) {
-    actionsHeader.onclick = () => {
-      const open = !document.body.classList.contains("actionsOpen");
-      setActions(open);
-    };
-  }
+document.body.classList.add("actionsOpen");
 
   // Default: open on desktop, closed on mobile
   const isSmall = window.matchMedia("(max-width: 900px)").matches;
